--- a/style.css
+++ b/style.css
@@ -9,3 +9,39 @@
 #icon{
     color: #c2c5cd;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.ADMIN{
+    color: #fdc106;
+}
+.MAESTRO{
+    color: #2c9faf;
+}
+.ALUMNO{
+    color: #6f747e;
+}
