--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 .ALUMNO{
     color: #6f747e;
 }
-.modal-editar {
+.modal-editar, #modalEditar {
     position: fixed;
     z-index: 1;
     left: 0;
